--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>QRCode Generator ครูบัชซูดิน มอลอ โรงเรียนอนุบาลสตูล</title>
+	<title>qrCode Generator by บัชซูดิน มอลอ ครูโรงเรียนอนุบาลสตูล</title>
 	<link rel="stylesheet" href="app.css">
 	<link rel="stylesheet" href="app.css" media="print">
 </head>
@@ -17,9 +17,10 @@
 				<marquee scrolldelay="90">
 					<font size="5">
 						<font color="#000000">
-							<img src="https://i.ibb.co/t8qTcY1/heart.png" width="25" height="25" alt="อามีน หยงสตาร์" />
+							<img src="https://i.ibb.co/t8qTcY1/heart.png" width="25" height="25"
+								alt="ครูบัช อนุบาลสตูล" />
 							<B>กรุณากรอกลิ้ง WEBSITE หรือ TEXT </B> <img src="https://i.ibb.co/t8qTcY1/heart.png"
-								width="25" height="25" alt="อามีน หยงสตาร์" />
+								width="25" height="25" alt="ครูบัช อนุบาลสตูล" />
 				</marquee>
 				</p>
 </body>
@@ -27,40 +28,43 @@
 <div class="form-control">
 	<input type="text" id="data">
 </div>
+
 <div class="form-control">
 	<button id="btn">Generate QR Code</button><br>
-	<button onclick="downloadImage()" style="background-color: #ae4d4d;" id="btn2">Download QR Code</button>
+	<button onclick="downloadImage()" style="background-color: #7149FF;" id="btn2">Download QR Code</button>
 </div>
 
 <footer class="footer">
 	<center>
+
 		<div class="print">
 			<br><button type="button" id="print" onclick="window.print();">print </button></br>
 		</div>
+
 		<footer class="footer">
 			<section class="container">
 				<br>
-				<h> จำนวนการใช้งาน </h></br>
+				<h> จำนวนผู้ใช้งาน </h></br>
+				<br>
+				<script type='text/javascript'
+					src='https://www.siamecohost.com/member/gcounter/graphcount.php?page=Generater&style=48&maxdigits=5'></script>
+				</br>
+				<div class="powr-comments" id="07a26bcf_1643204625"></div>
+				<script src="https://www.powr.io/powr.js?platform=html"></script>
 				<section class="container">
-					<p style="font-size:15px;">
-						<br>
-						<script type='text/javascript'
-							src='https://www.siamecohost.com/member/gcounter/graphcount.php?page=Generator&style=02&maxdigits=6'></script>
-						<br>
-						<a style="color:blue;" target="_blank" href="./img/kroo_bach2.png"
-							title="Support for Developer">ผู้พัฒนา </a>
+					<p style="font-size:10px;">
+						<a style="color:blue;" target="_blank" href="./img/qr.jpg"
+							title="support for developer">ผู้พัฒนา </a>
 
 						<a style="color:black;" target="_blank"
-							href="https://www.youtube.com/channel/UC190WZaM5BaZw7vUKNTBO-A" title="Youtube Channel"> |
-							นาย บัชซูดิน มอลอ]</a>
-
+							href="https://www.youtube.com/channel/UC190WZaM5BaZw7vUKNTBO-A" title="YOUTUBE"> |
+							นาย บัชซูดิน มอลอ</a>
 					</p>
 				</section>
 		</footer>
-
+		<img src="" id="img">
 	</center>
 
-	<img src="" id="img">
 	</div>
 
 	</div>
